--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@ $rangoonGreen: #1B1A17;
 $masala: #444240;
 $oliveHaze: #8B8371;
 $ash: #C4C0B6;
+$springWood: #F7F5EF;
+$fuscousGray: #5C5C50;
 
 // Размер шрифта
 $smaller12: 12px;
@@ -38,20 +40,32 @@ a {
   color: $rangoonGreen;
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 // Переиспользуемые блоки
 .logo {
   width: 104px;
   height: 26px;
   background-color: $lightDark;
-  -webkit-mask-image: url(../images/logo.svg);
-  mask-image: url(../images/logo.svg);
   transition: 0.4s;
+  mask-repeat: no-repeat;
+  mask-size: cover;
+  mask-position: center;
+  mask-image: url(../images/logo.svg);
+  -webkit-mask-image: url(../images/logo.svg);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
+
   &:hover {
     transform: scale(1.1);
   }
 }
 
-.btn {
+.link {
   display: block;
   width: max-content;
   background-color: $masala;
@@ -61,6 +75,7 @@ a {
   text-transform: uppercase;
   padding: 26px 38px;
   transition: 0.2s;
+
   &:hover {
     background-color: $cameo;
   }
@@ -71,6 +86,14 @@ a {
 
 .bg-white {
   background-color: $white;
+}
+
+.bg-masala {
+  background-color: $masala;
+}
+
+.bg-liner-gradient {
+  background: linear-gradient(to right, $springWood 30%, $cream 30%);
 }
 
 .img {
@@ -86,6 +109,12 @@ a {
   background-color: $oliveHaze;
 }
 
+.title {
+  font-family: $playfairDisplay;
+  font-size: $medium32;
+  font-weight: $regularW;
+}
+
 // Header
 .header {
   display: flex;
@@ -94,22 +123,33 @@ a {
   max-width: 1170px;
   padding: 10px 15px 18px 15px;
   margin: 0 auto;
+
   &__list {
     display: flex;
     gap: 65px;
     list-style-type: none;
   }
   &__link {
+    display: block;
     font-size: $small14;
     color: $lightDark;
     transition: 0.2s;
+
     &:hover {
+      transform: scale(1.1);
       color: $cameo;
+    }
+    &:active {
+      transform: scale(1);
     }
   }
   &__icons {
     display: flex;
     gap: 23px;
+  }
+  &__icon {
+    width: 20px;
+    height: 100%;
   }
   &__btn {
     position: relative;
@@ -131,12 +171,7 @@ a {
   }
 }
 
-.icon-search {
-  background-image: url(../images/search.svg);
-}
-
 .icon-fav {
-  background-image: url(../images/fav.svg);
   &::after {
     display: flex;
     align-items: center;
@@ -146,15 +181,11 @@ a {
     position: absolute;
     border-radius: 100%;
     top: -3px;
-    right: -8px;
+    right: -14px;
     width: 13px;
     height: 13px;
     background-color: $roseFog;
   }
-}
-
-.icon-basket {
-  background-image: url(../images/basket.svg);
 }
 
 // Main
@@ -164,19 +195,19 @@ a {
   margin: 0 auto;
 }
 
-
 .main {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
   height: 758px;
+
+  &__info {
+    grid-column: 1/4;
+    grid-row: 3/6;
+  }
   &__title {
-    position: relative;
     font-size: $large45;
     font-weight: $regularW;
     font-family: $playfairDisplay;
-    margin-bottom: 10px;
-    padding-left: 4px;
     &::before {
       position: absolute;
       content: '';
@@ -196,36 +227,42 @@ a {
     padding-left: 4px;
   }
   &__paragraph {
-    line-height: 152%;
+    line-height: 1.5;
     font-size: $small14;
     opacity: 0.82;
     margin-bottom: 35px;
     padding-left: 4px;
   }
   &__img {
-    display: flex;
+    grid-column: 4/7;
+    grid-row: 1/7;
     position: relative;
     pointer-events: none;
     user-select: none;
-  }
-  &__ellipse {
-    position: absolute;
-    z-index: -1;
-    right: -239px;
-    top: -391px;
+    &::before {
+      position: absolute;
+      content: '';
+      height: 100%;
+      width: 100%;
+      background-image: url(../images/ellipse.svg);
+      top: 8px;
+      z-index: -1;
+      right: 124px;
+    }
   }
   &__watch {
     position: absolute;
-    top: -400px;
-    left: -50px;
+    left: 148px;
+    top: -20px;
   }
   &__parameter {
     position: relative;
     font-family: $prata;
   }
   &__parameter_left {
-    bottom: 251px;
-    right: 334px;
+    grid-column: 4/5;
+    grid-row: 2/3;
+    align-self: end;
     &::after {
       position: absolute;
       content: '';
@@ -237,15 +274,17 @@ a {
     }
   }
   &__parameter_right {
-    bottom: -258px;
-    right: 64px;
+    grid-column: 8/9;
+    grid-row: 5/6;
+    align-self: center;
+    justify-self: end;
     &::before {
       position: absolute;
       content: '';
       height: 1px;
       width: 50px;
       background-color: $oliveHaze;
-      left: -78px;
+      left: -68px;
       top: 8px;
     }
   }
@@ -253,31 +292,44 @@ a {
 
 // Popular
 .popular {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
   padding-bottom: 86px;
+  position: relative;
 
   &__title {
-    text-align: center;
-    font-family: $playfairDisplay;
-    font-size: $medium32;
-    font-weight: $regularW;
-    margin-top: 70px;
+    display: grid;
+    justify-content: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 80px;
   }
   &__all {
-    align-self: flex-end;
-    font-weight: $mediumW;
-    color: $masala;
+    display: grid;
+    align-self: end;
+    justify-self: end;
+    grid-column: 3/4;
+    grid-row: 1/2;
     border-bottom: 1px solid $ash;
     padding-bottom: 12px;
     margin-bottom: 20px;
-  }
-  &__products {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+
+    &_text {
+      font-weight: $mediumW;
+      color: $masala;
+      transition: .2s;
+      &:hover {
+        transform: translateX(5px);
+      }
+      &:active {
+        color: $cameo;
+        transform: translateX(0);
+      }
+    }
   }
   &__product {
+    grid-row: 2/5;
     background-color: $cream;
     padding: 40px 28px;
   }
@@ -299,7 +351,7 @@ a {
       position: absolute;
       width: 313px;
       height: 313px;
-      background-image: url(../images/ellipse_small.png);
+      background-image: url(../images/ellipse_small.svg);
       background-repeat: no-repeat;
     }
   }
@@ -309,5 +361,165 @@ a {
     gap: 18px;
     font-family: $playfairDisplay;
     color: $rangoonGreen;
+  }
+}
+
+// Feature
+.feature {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 70px;
+  row-gap: 20px;
+  padding: 52px 40px 20px 40px;
+  background-repeat: no-repeat;
+  background-position: right -5% bottom;
+  background-size: contain;
+  background-image: url(../images/ellipse_multiple.svg);
+
+  &__img {
+    grid-column: 1/3;
+    grid-row: 1/5;
+  }
+  &__info {
+    grid-row: 2/3;
+    grid-column: 4/7;
+  }
+  &__paragraph {
+    color: $masala;
+    line-height: 1.5;
+    margin-bottom: 45px;
+  }
+  &__link {
+    background-color: $cameo;
+    color: $white;
+    &:hover {
+      background-color: $masala;
+      color: $white;
+    }
+  }
+  &__switcher {
+    display: flex;
+    align-items: baseline;
+    gap: 20px;
+    grid-row: 5/6;
+    grid-column: 3/4;
+  }
+  &__counter {
+    font-family: $prata;
+  }
+  &__button {
+    display: flex;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  &__button_left {
+    transform: rotate(180deg);
+  }
+}
+
+// Follow
+.follow {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 70px;
+  padding: 80px 98px 90px 0px;
+
+  &__info {
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+  &__paragraph {
+    line-height: 1.69;
+    margin-bottom: 118px;
+  }
+}
+
+.social {
+  display: flex;
+  gap: 16px;
+
+  &__link {
+    display: block;
+    width: 22px;
+    height: 22px;
+  }
+  &__icon {
+    width: 100%;
+    height: 100%;
+    fill: $fuscousGray;
+    transition: .2s;
+
+    &:hover {
+      fill: $cameo;
+      transform: scale(1.1);
+    }
+    &:active {
+      transform: scale(1);
+    }
+  }
+}
+
+.plate {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  grid-column: 3/5;
+  grid-row: 1/3;
+
+  &__item_1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    width: 242px;
+    height: 228px;
+  }
+  &__item_2 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    width: 242px;
+    height: 222px;
+  }
+  &__item_3 {
+    grid-row: 1/3;
+    grid-column: 2/5;
+    width: 337px;
+    height: 460px;
+  }
+}
+
+// Footer
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 67px 0;
+  gap: 20px;
+
+  &__logo {
+    display: block;
+    width: 130px;
+    height: 34px;
+    background-color: $white;
+  }
+  &__title {
+    color: $white;
+    text-transform: uppercase;
+    letter-spacing: .7px;
+    font-size: $small14;
+    margin-bottom: 26px;
+  }
+  &__item {
+    margin-bottom: 10px;
+  }
+  &__paragraph, &__link {
+    color: $white;
+    opacity: 0.75;
+    font-size: $smaller12;
+  }
+  &__link {
+    transition: .2s;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
