--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,8 +19,12 @@ $springWood: #F7F5EF;
 $fuscousGray: #5C5C50;
 
 // Размер шрифта
+$smaller6: 6px;
+$smaller8: 8px;
 $smaller12: 12px;
 $small14: 14px;
+$medium22: 22px;
+$medium24: 24px;
 $medium30: 30px;
 $medium32: 32px;
 $large45: 45px;
@@ -93,10 +97,10 @@ ul {
 }
 
 .bg-liner-gradient {
-  background: linear-gradient(to right, $springWood 30%, $cream 30%);
+  background: linear-gradient(to right, $springWood 40%, $cream 30%);
 }
 
-.img {
+img {
   width: 100%;
   height: 100%;
 }
@@ -196,15 +200,18 @@ ul {
 }
 
 .main {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  height: 758px;
+  display: flex;
+  align-items: center;
+  gap: 180px;
+  position: relative;
+  max-height: 740px;
 
   &__info {
-    grid-column: 1/4;
-    grid-row: 3/6;
+    padding-left: 50px;
   }
   &__title {
+    position: relative;
+    width: max-content;
     font-size: $large45;
     font-weight: $regularW;
     font-family: $playfairDisplay;
@@ -234,8 +241,6 @@ ul {
     padding-left: 4px;
   }
   &__img {
-    grid-column: 4/7;
-    grid-row: 1/7;
     position: relative;
     pointer-events: none;
     user-select: none;
@@ -245,24 +250,25 @@ ul {
       height: 100%;
       width: 100%;
       background-image: url(../images/ellipse.svg);
-      top: 8px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
       z-index: -1;
-      right: 124px;
+      left: -45%;
     }
   }
   &__watch {
-    position: absolute;
-    left: 148px;
-    top: -20px;
+    width: 100%;
+    height: 100%;
   }
   &__parameter {
     position: relative;
     font-family: $prata;
   }
   &__parameter_left {
-    grid-column: 4/5;
-    grid-row: 2/3;
-    align-self: end;
+    position: absolute;
+    left: 462px;
+    top: 160px;
     &::after {
       position: absolute;
       content: '';
@@ -274,17 +280,16 @@ ul {
     }
   }
   &__parameter_right {
-    grid-column: 8/9;
-    grid-row: 5/6;
-    align-self: center;
-    justify-self: end;
+    position: absolute;
+    right: 0;
+    bottom: 142px;
     &::before {
       position: absolute;
       content: '';
       height: 1px;
       width: 50px;
       background-color: $oliveHaze;
-      left: -68px;
+      right: 132px;
       top: 8px;
     }
   }
@@ -292,25 +297,18 @@ ul {
 
 // Popular
 .popular {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding-bottom: 86px;
   position: relative;
 
   &__title {
-    display: grid;
-    justify-content: center;
-    grid-column: 2/3;
-    grid-row: 1/2;
     margin-top: 80px;
   }
   &__all {
-    display: grid;
-    align-self: end;
-    justify-self: end;
-    grid-column: 3/4;
-    grid-row: 1/2;
+    align-self: flex-end;
     border-bottom: 1px solid $ash;
     padding-bottom: 12px;
     margin-bottom: 20px;
@@ -329,7 +327,6 @@ ul {
     }
   }
   &__product {
-    grid-row: 2/5;
     background-color: $cream;
     padding: 40px 28px;
   }
@@ -343,16 +340,17 @@ ul {
     opacity: .82;
   }
   &__img {
-    width: 313px;
-    height: 313px;
+    position: relative;
     margin-bottom: 20px;
     &::before {
       content: "";
       position: absolute;
-      width: 313px;
-      height: 313px;
+      width: 100%;
+      height: 100%;
       background-image: url(../images/ellipse_small.svg);
       background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
     }
   }
   &__detail {
@@ -362,28 +360,24 @@ ul {
     font-family: $playfairDisplay;
     color: $rangoonGreen;
   }
+  &__flex {
+    display: flex;
+    // flex-wrap: wrap;
+    gap: 26px;
+  }
 }
 
 // Feature
 .feature {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  column-gap: 70px;
-  row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   padding: 52px 40px 20px 40px;
   background-repeat: no-repeat;
   background-position: right -5% bottom;
   background-size: contain;
   background-image: url(../images/ellipse_multiple.svg);
 
-  &__img {
-    grid-column: 1/3;
-    grid-row: 1/5;
-  }
-  &__info {
-    grid-row: 2/3;
-    grid-column: 4/7;
-  }
   &__paragraph {
     color: $masala;
     line-height: 1.5;
@@ -399,10 +393,9 @@ ul {
   }
   &__switcher {
     display: flex;
+    align-self: center;
     align-items: baseline;
     gap: 20px;
-    grid-row: 5/6;
-    grid-column: 3/4;
   }
   &__counter {
     font-family: $prata;
@@ -416,18 +409,23 @@ ul {
   &__button_left {
     transform: rotate(180deg);
   }
+  &__flex {
+    display: flex;
+    align-items: center;
+    gap: 70px;
+  }
 }
 
 // Follow
 .follow {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  column-gap: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 70px;
   padding: 80px 98px 90px 0px;
 
-  &__info {
-    grid-column: 1/3;
-    grid-row: 2;
+  &__title {
+    white-space: nowrap;
   }
   &__paragraph {
     line-height: 1.69;
@@ -461,29 +459,24 @@ ul {
 }
 
 .plate {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
   gap: 10px;
-  grid-column: 3/5;
-  grid-row: 1/3;
-
   &__item_1 {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    width: 242px;
-    height: 228px;
+    max-width: 242px;
+    max-height: 228px;
   }
   &__item_2 {
-    grid-row: 2/3;
-    grid-column: 1/2;
-    width: 242px;
-    height: 222px;
+    max-width: 242px;
+    max-height: 222px;
   }
   &__item_3 {
-    grid-row: 1/3;
-    grid-column: 2/5;
-    width: 337px;
-    height: 460px;
+    max-width: 337px;
+    max-height: 460px;
+  }
+  &__flex {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
 
@@ -520,6 +513,155 @@ ul {
 
     &:hover {
       opacity: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .main {
+    &__parameter_right {
+      left: 462px;
+      &::before {
+        left: 124px;
+      }
+    }
+    &__parameter {
+      font-size: $small14;
+    }
+  }
+  .popular {
+    &__title {
+      font-size: $medium24;
+    }
+  }
+  .feature {
+    &__title {
+      font-size: $medium24;
+    }
+    &__paragraph {
+      font-size: $small14;
+    }
+  }
+  .follow {
+    &__title {
+      font-size: $medium24;
+    }
+    &__paragraph {
+      font-size: $small14;
+    }
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .main {
+    &__parameter {
+      display: none;
+    }
+    &__img {
+      &::before {
+        display: none;
+      }
+    }
+  }
+  .popular {
+    &__title {
+      font-size: $medium22;
+    }
+  }
+  .feature {
+    &__img {
+      width: 300px;
+    }
+    &__title {
+      font-size: $medium22;
+    }
+    &__paragraph {
+      font-size: $smaller12;
+    }
+    &__link {
+      padding: 12px 12px;
+    }
+    &__counter {
+      font-size: $small14;
+    }
+  }
+  .follow {
+    &__title {
+      font-size: $medium22;
+    }
+    &__paragraph {
+      font-size: $smaller12;
+    }
+  }
+}
+
+@media screen and (max-width: 760px) {
+  nav {
+    display: none;
+  }
+  .main {
+    gap: 80px;
+    &__title {
+      font-size: $medium30;
+      &::before {
+        display: none;
+      }
+    }
+    &__subtitle {
+      font-size: $medium22;
+    }
+    &__paragraph {
+      font-size: $smaller12;
+    }
+  }
+  .bg-liner-gradient {
+    background: none;
+  }
+  .popular {
+    &__flex {
+      flex-wrap: wrap;
+    }
+    &__product {
+      width: -webkit-fill-available;
+    }
+  }
+  .feature {
+    text-align: center;
+    &__paragraph {
+      margin-bottom: 10px;
+    }
+    &__flex {
+      flex-direction: column-reverse;
+      gap: 30px;
+    }
+    &__link {
+      text-align: center;
+      width: auto;
+    }
+  }
+  .plate {
+    display: none;
+  }
+  .follow {
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+    &__title {
+      font-size: $medium24;
+    }
+    &__paragraph {
+      font-size: $small14;
+    }
+  }
+  .social {
+    justify-content: center;
+  }
+  .footer {
+    &__title {
+      font-size: $smaller8;
+    }
+    &__link, &__paragraph {
+      font-size: $smaller6;
     }
   }
 }
